<resources>
    <string name="app_name">Spin_Win</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_wlamount">0</string>
    <string name="_totalamount">50000</string>
    <string name="_1st12">1st12</string>
    <string name="_2nd12">2nd12</string>
    <string name="_3rd12">3rd12</string>
    <string name="_2to1st">2to1</string>
    <string name="_2to1nd">2to1</string>
    <string name="_2to1rd">2to1</string>
    <string name="_btnStart">Spin</string>
    <string name="_btnSetting">Setting</string>
    <string name="_1to18">1to18</string>
    <string name="_Even">EVEN</string>
    <string name="_Red">RED</string>
    <string name="_Black">BLACK</string>
    <string name="_Odd">ODD</string>
    <string name="_19to36">19to36</string>
    <string name="_selectamount">00000</string>
    <string name="_startamount">0</string>
    <string name="_btnOk">Ok</string>
    <string name="_btnCancel">Cancel</string>
    <string name="_btnPlus">+</string>
    <string name="_btnMinus">-</string>
    <string name="_title">Select amount you want to play</string>
    <string name="_sound">Sound: </string>
    <string name="_background">Background: </string>
    <string name="_btnClose">Close</string>
    <string name="greenBackground">Green</string>
    <string name="redBackground">Red</string>
</resources>
