<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#234e35">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:text=""/>

            <TextView
                android:layout_width="100dp"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textStyle="italic"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:background="#b63636"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/_selectamount"
                android:id="@+id/textViewtotalamountDialog"
                android:layout_marginRight="10dp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""/>

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:textStyle="italic"
                android:textSize="30sp"
                android:gravity="right"
                android:enabled="false"
                android:textColor="#b63636"
                android:inputType="number"
                android:background="@android:color/background_light"
                android:text="@string/_startamount"/>

            <TextView
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:text=""/>

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:text="@string/_btnOk"
                android:background="#b63636"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                android:id="@+id/ok"
                android:layout_marginRight="10dp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""/>

            <Button
                android:layout_width="68dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/_btnPlus"
                android:background="#b63636"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:id="@+id/plus"
                android:layout_gravity="right" />

            <Button
                android:layout_width="68dp"
                android:layout_marginLeft="15dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:background="#b63636"
                android:textSize="30sp"
                android:textColor="@android:color/background_light"
                android:text="@string/_btnMinus"
                android:id="@+id/minus"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="#b63636"
                android:textSize="20sp"
                android:textColor="@android:color/background_light"
                android:text="@string/_btnCancel"
                android:id="@+id/cancel"
                android:layout_marginRight="10dp"
                android:layout_gravity="right" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text=""/>

    </LinearLayout>

</RelativeLayout>

